fixing stretching image

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -28,4 +28,5 @@
   border-radius: 50%;
   background-color: $katchup;
   text-align: center;
+  object-fit: cover;
 }
