--- a/app/assets/stylesheets/components/feed/_feed_card.scss
+++ b/app/assets/stylesheets/components/feed/_feed_card.scss
@@ -21,6 +21,7 @@
   border-radius: 50%;
   margin-left: 4px;
   margin-right: 12px;
+  object-fit: cover;
 }
 
 .feed-card-text {
